# codecrafters-shell-c

./: .gitignore  CMakeLists.txt  README.md
src/: autocmp.c  autocmp.h  cmd.c  cmd.h  main.c  misc.c  misc.h  parse.c  parse.h  ptr_array.c  ptr_array.h  redir.c  redir.h  scan.c  scan.h  token.c  token.h  trie.c  trie.h  xmalloc.c  xmalloc.h
